# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import storageRouter from "./storage";
 import modelsRouter from "./models";
 import componentsRouter from "./components";
 import statsRouter from "./stats";
+import maintenanceRouter from "./maintenance";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(storageRouter);
 router.use(modelsRouter);
 router.use(componentsRouter);
 router.use(statsRouter);
+router.use(maintenanceRouter);
 
 export default router;
